# lunasdk

./: .gitlab-ci.yml  mypy.ini  pyproject.toml  readme.md
examples/sdk_examples/: ags_estimation.py  basic_attributes_estimation.py  body_attributes_estimation.py  body_descriptor_estimation.py  body_detection.py  body_redetection.py  body_warper.py  build_index.py  credibility_estimation.py  deepfake_estimator.py  duty_uniform_estimation.py  dynamic_range_estimation.py  emotion_estimaton.py  eye_estimaton.py  eyebrow_estimaton.py  face_descriptor_estimation.py  face_detection.py  face_detection_background.py  face_natural_light.py  face_occlusion_estimaton.py  face_redetection.py  face_warper.py  facial_hair_estimation.py  fisheye.py  gaze_direction_estimation.py  glasses_estimation.py  head_pose_estimation.py  headwear.py  human_detection.py  image_color_type.py  image_modification.py  image_rotation.py  landmarks_estimation.py  light_colored_clothes_estimation.py  livenessv1_estimator.py  mask_estimation.py  mouth_sate_estimation.py  neck_occlusion_estimation.py  orientation_mode_estimation.py  photorealistic_face_estimation.py  (+5 more)
examples/sdk_examples/opencv_examples/: te.py  warper.py
lunavl/: __init__.py
lunavl/sdk/: async_task.py  base.py  estimator_collections.py  globals.py  luna_faces.py  version.py
lunavl/sdk/descriptors/: descriptors.py  matcher.py
lunavl/sdk/detectors/: base.py  bodydetector.py  facedetector.py  humandetector.py
lunavl/sdk/errors/: errors.py  exceptions.py
lunavl/sdk/estimators/: base.py
lunavl/sdk/estimators/body_estimators/: body_attributes.py  body_descriptor.py  bodywarper.py  landmarks.py
lunavl/sdk/estimators/estimators_utils/: extractor_utils.py
lunavl/sdk/estimators/face_estimators/: ags.py  background.py  basic_attributes.py  credibility.py  deepfake.py  duty_uniform.py  dynamic_range.py  emotions.py  eyebrow_expressions.py  eyes.py  face_descriptor.py  face_occlusion.py  facewarper.py  facial_hair.py  fisheye.py  glasses.py  head_pose.py  headwear.py  image_type.py  landmarks.py  light_colored_clothes.py  livenessv1.py  mask.py  mouth_state.py  natural_light.py  neck_occlusion.py  photorealistic_face.py  portrait_style.py  red_eye.py  warp_quality.py
lunavl/sdk/estimators/image_estimators/: image_modification.py  orientation_mode.py  people_count.py
lunavl/sdk/faceengine/: engine.py  setting_provider.py
lunavl/sdk/image_utils/: geometry.py  image.py  transfers.py
lunavl/sdk/image_utils/pil/: np.py  tiff.py  truncate_image.py
lunavl/sdk/indexes/: base.py  builder.py  stored_index.py
lunavl/sdk/trackengine/: engine.py  setting_provider.py  structures.py
tests/: detect_test_class.py  resources.py  schemas.py  test_body_attributes.py  test_body_detector.py  test_body_landmarks.py  test_body_redetect.py  test_credibility.py  test_deepfake_estimation.py  test_dynamic_range.py  test_estimate_descriptor.py  test_estimate_duty_uniform.py  test_estimate_eyes.py  test_estimate_face_detection_background.py  test_estimate_facial_hair.py  test_estimate_light_colored_clothes.py  test_estimate_neck_occlusion.py  test_estimate_photorealistic_face.py  test_estimation_ags.py  test_estimation_basic_attributes.py  test_face_occlusion.py  test_face_redetect.py  test_face_warper.py  test_facedetector.py  test_fisheye.py  test_get_version.py  test_head_pose_estimation.py  test_headwear_estimation.py  test_human_detector.py  test_image.py  test_image_ml_converters.py  test_image_ml_transfers.py  test_image_modification.py  test_indexes.py  test_livenessv1.py  test_mask.py  test_people_count.py  test_portrait_style.py  test_settings_provider.py  test_track_engine.py  (+2 more)
