[build-system]
requires = ["poetry"]
build-backend = "poetry.masonry.api"

[tool]
[tool.isort]
profile = "black"
combine_as_imports = true
multi_line_output = 3
line_length = 120

[tool.poetry]
name = "lunavl"
version = "2.7.2"
description = "Python interface for VisionLabs Luna platform"
authors = ["VisionLabs <m.limonov@visionlabs.ru>"]
repository = "https://github.com/VisionLabs/lunasdk"
[[tool.poetry.source]]
name = "vlabspypi"
url = "http://pypi.vlabs/root/public/+simple"
priority = "supplemental"

[tool.poetry.dependencies]
python = ">=3.9"
numpy = "*"
requests = "*"
Pillow = {version = "*", markers = "sys_platform == 'win32' or sys_platform == 'darwin'"}
pillow-simd = {version = "*", markers = "sys_platform != 'win32' and sys_platform != 'darwin'"}
FaceEngine = ">=5.23.3.0"

[tool.poetry.group.linters.dependencies]
autoflake = "*"
black = "*"
isort = "*"
flake8 = "^3.7.9"
mypy = "*"

[tool.poetry.group.dev.dependencies]
types-requests = "^2.28.11.15"
sphinx = ">=2.0.0"
pytest = ">=4.4"
pytest-subtests = "*"
sphinx-autodoc-typehints = "*"
pre-commit = "^2.19"
snakecase = "*"
jsonschema = "^3.2.0"

[tool.black]
line-length = 120
target-version = ['py310']
